# codebase-mentor

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
.claude-plugin/: marketplace.json
.github/workflows/: publish-pypi.yml  test-installer.yml  test-integration.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/phase-01/: 01-01-PLAN.md
.planning/phases/01-core-wizard-skill/: 01-01-SUMMARY.md  01-CONTEXT.md
.planning/phases/02-capture-synthesis/: 02-01-PLAN.md  02-01-SUMMARY.md  02-CONTEXT.md  02-VERIFICATION.md
.planning/phases/03-permission-agents-commands/: 03-01-PLAN.md  03-01-SUMMARY.md  03-CONTEXT.md  03-UAT.md  03-VERIFICATION.md
.planning/phases/04-claude-code-plugin-manifest-and-marketplace-listing/: 04-01-PLAN.md  04-01-SUMMARY.md
.planning/phases/05-local-and-global-claude-code-plugin-install-and-uninstall/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md
.planning/phases/06-python-installer-for-all-runtimes-published-to-pypi-as-ai-codebase-mentor/: 06-01-PLAN.md  06-01-SUMMARY.md  06-02-PLAN.md  06-02-SUMMARY.md
.planning/phases/07-github-actions-workflows-for-installer-tests-and-pypi-release-on-tag/: 07-01-PLAN.md  07-01-SUMMARY.md
.planning/phases/08-opencode-converter/: 08-01-PLAN.md  08-01-SUMMARY.md  (+4 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  STACK.md
ai_codebase_mentor/: __init__.py  cli.py
ai_codebase_mentor/converters/: __init__.py  base.py  claude.py  gemini.py  opencode.py
docs/: testing.md
evals/: evals.json  run_evals.py  serve_review.py  trigger_review.html
plugin/: SKILL.md
plugin/agents/: codebase-wizard-agent.md
plugin/commands/: codebase-wizard-export.md  codebase-wizard-setup.md
plugin/references/: describe-questions.md
plugin/setup/: setup.sh
scripts/: run_gemini_e2e_with_artifacts.sh  run_integration_tests.sh  run_opencode_e2e_with_artifacts.sh
tests/: test_claude_installer.py  test_e2e_gemini_installer.py  test_e2e_installer.py  test_e2e_setup.py  test_gemini_installer.py  test_opencode_installer.py  test_plugin_structure.py  test_wizard_live.py
tests/integration/: test_agent_rulez_e2e.py  test_failure_artifacts.py
(+80 files in other folders)
