[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-codebase-mentor"
version = "1.2.0"
description = "Wizard-style codebase exploration and documentation. Install the Codebase Wizard plugin for Claude Code (and other runtimes in future releases)."
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "Spillwave Solutions", email = "hello@spillwave.io"},
]
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["codebase", "documentation", "ai", "claude"]
dependencies = ["click>=8.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "build>=1.0"]

[project.scripts]
ai-codebase-mentor = "ai_codebase_mentor.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ai_codebase_mentor*"]

[tool.setuptools.package-data]
"ai_codebase_mentor" = ["plugin/**/*", "plugin/**/.claude-plugin/*"]

[project.urls]
Homepage = "https://github.com/SpillwaveSolutions/codebase-mentor"
Repository = "https://github.com/SpillwaveSolutions/codebase-mentor"
